--- a/petlove_agents/src/petlove_agents/config/tasks.yaml
+++ b/petlove_agents/src/petlove_agents/config/tasks.yaml
@@ -1,13 +1,15 @@
 recuperar_contexto:
   description: >
-    Verifique se é necessário recuperar contexto para responder a mensagem do usuário.
-    Se não for necessário, então apenas finalize a resposta dizendo que não conseguiu encontrar o produto ideal.
-    Caso seja necessario, então reformule a mensagem do usuário em uma standalone question, que deve ser objetiva e sem ambiguidade, adicionando detalhes sobre o animal e raça caso identificados para melhorar a busca.\n
-    Os dados dos produtos vetorizados são esses (utilize na formulacao da standalone question): id, name, description, category, brand, price, discount_price, rating, stock, image_url, keywords, nutritional_info, proteína, gordura, fibras, umidade, life_stage, weight_options, review_count, link. \n
-    Mensagem do usuário: '{user_input}'.\n
-    Em seguida, use essa frase para consultar o banco e recuperar os trechos mais relevantes disponíveis.
-    Se a query não trouxe resultados relevantes, reformule a frase e tente novamente no máximo 3 vezes, e traga a ultima tentativa como contexto.
-    NUNCA TENTE REUTILIZAR O MESMO INPUT MAIS DE UMA VEZ.
+    Reformule a mensagem do usuário em uma pergunta objetiva e específica para buscar produtos relevantes no banco vetorial. \n
+    mensagem do usuário: '{user_input}'
+    Utilize dados como animal e raça, se disponíveis, para aumentar a precisão.
+    Realize no máximo 2 tentativas de reformulação, usando perguntas diferentes.
+    Use apenas dados presentes na mensagem original (animal, raça, tipo de produto).
+    Corrija erros gramaticais, mas não invente nada novo.
+    Se a mensagem já estiver clara, apenas retorne ela sem mudanças.
+    Traga os produtos recuperados exatamente como retornados, sem alterações.
+    Caso não encontre produtos válidos (com nome, descrição e link), diga: Infelizmente, não encontramos nenhum produto ideal para sua necessidade no momento. Você pode me dar mais detalhes para que eu possa buscar melhor?
+
     
   expected_output: >
     Pelo menos 2 Resultados recuperados do banco de dados vetorial exatamente como foi retornado,
