--- a/petlove_agents/src/petlove_agents/config/tasks.yaml
+++ b/petlove_agents/src/petlove_agents/config/tasks.yaml
@@ -1,19 +1,19 @@
 recuperar_contexto:
   description: >
-    Reformule a mensagem do usuário em uma pergunta objetiva e específica para buscar produtos relevantes no banco vetorial. \n
-    mensagem do usuário: '{user_input}'
+    Reformule a mensagem do usuário em uma pergunta objetiva e específica para buscar produtos relevantes de acordo com o pedido do cliente no banco vetorial. \n
+    mensagem do cliente: '{user_input}'
     Utilize dados como animal e raça, se disponíveis, para aumentar a precisão.
     Realize no máximo 2 tentativas de reformulação, usando perguntas diferentes.
     Use apenas dados presentes na mensagem original (animal, raça, tipo de produto).
     Corrija erros gramaticais, mas não invente nada novo.
     Se a mensagem já estiver clara, apenas retorne ela sem mudanças.
     Traga os produtos recuperados exatamente como retornados, sem alterações.
-    Caso não encontre produtos válidos (com nome, descrição e link), diga: Infelizmente, não encontramos nenhum produto ideal para sua necessidade no momento. Você pode me dar mais detalhes para que eu possa buscar melhor?
+    Caso não encontre produtos relevantes, diga: Infelizmente, não encontramos nenhum produto ideal para sua necessidade no momento. Você pode me dar mais detalhes para que eu possa buscar melhor?
 
     
   expected_output: >
     Pelo menos 2 Resultados recuperados do banco de dados vetorial exatamente como foi retornado,
-    Caso o contexto não traga ao menos um produto válido (com name, link e description), a resposta deve ser: Infelizmente, não encontramos nenhum produto ideal para sua necessidade no momento. Você pode me dar mais detalhes para que eu possa buscar melhor?
+    Caso o contexto não traga ao menos um produto relevante, a resposta deve ser: Infelizmente, não encontramos nenhum produto ideal para sua necessidade no momento. Você pode me dar mais detalhes para que eu possa buscar melhor?
     SEM QUALQUER MODIFICAÇÃO NOS RESULTADOS E METADADOS.
     SEMPRE RETORNE O LINK DOS PRODUTOS ENCONTRADOS.
   agent: consultor_vetorial
