--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
   api:
     build:
       context: .
-      dockerfile: api/Dockerfile
+      dockerfile: Dockerfile
     container_name: petlove-api
     ports:
       - "8000:8000"
@@ -20,8 +20,8 @@ services:
       - .env
     depends_on:
       - mongo
-    volumes:
-      - .:/app
+    # volumes:
+      # - .:/app
 
 volumes:
   mongo-data:
