--- a/petlove_agents/src/petlove_agents/config/tasks.yaml
+++ b/petlove_agents/src/petlove_agents/config/tasks.yaml
@@ -8,12 +8,12 @@ recuperar_contexto:
     Corrija erros gramaticais, mas não invente nada novo.
     Se a mensagem já estiver clara, apenas retorne ela sem mudanças.
     Traga os produtos recuperados exatamente como retornados, sem alterações, incluindo informações úteis, como preço e descrição.
-    Caso não encontre produtos relevantes, diga: Infelizmente, não encontramos nenhum produto ideal para sua necessidade no momento. Você pode me dar mais detalhes para que eu possa buscar melhor?
+    Caso o retorno da ferramenta esteja vazio, diga: Infelizmente, não encontramos nenhum produto ideal para sua necessidade no momento, mas fico à disposição caso precise de mais alguma coisa.
 
     
   expected_output: >
-    Pelo menos 2 Resultados recuperados do banco de dados vetorial exatamente como foi retornado, com informações úteis sobre o produto.
-    Caso o contexto não traga ao menos um produto relevante, a resposta deve ser: Infelizmente, não encontramos nenhum produto ideal para sua necessidade no momento. Você pode me dar mais detalhes para que eu possa buscar melhor?
+    Pelo menos 3 Resultados recuperados do banco de dados vetorial exatamente como foi retornado, com informações úteis sobre o produto.
+    Caso o contexto não traga ao menos um produto relevante, a resposta deve ser: Infelizmente, não encontramos nenhum produto ideal para sua necessidade no momento, mas fico à disposição caso precise de mais alguma coisa.
     SEM QUALQUER MODIFICAÇÃO NOS RESULTADOS E METADADOS.
     SEMPRE RETORNE O LINK DOS PRODUTOS ENCONTRADOS.
   agent: consultor_vetorial
@@ -22,11 +22,12 @@ responder_cliente:
   description: >
     Use o contexto fornecido para responder a seguinte mensagem do usuário de forma clara e precisa: '{user_input}'. \n
     Caso não haja dados suficientes no contexto, informe que não foi possível econtrar o produto ideal, peça mais informações e fique à disposição do cliente.
-    Responda apenas com base no conteúdo do contexto, mas nunca mencione ele. NUNCA INVENTE PRODUTOS.
+    Responda apenas com base no conteúdo do contexto, mas nunca mencione ele. NUNCA UTILIZE CONHECIMENTO GERAL PARA RECOMENDAR PRODUTOS. OS PRODUTOS SUGERIDOS DEVEM SEMPRE ESTAR NO CONTEXTO.
     Sempre retorne o link do produto e preço, além de explicar o porque está sugerindo aquele produto.
     Caso o cliente envie uma saudação ou agradecimentos/despedidas, apenas retribua e fique a disposição para ajudá-lo caso ele precise de mais apoio.
   expected_output: >
     Uma resposta direta e clara para a mensagem do usuário, sem incluir informações que não foram requisitadas pelo cliente.
-    fundamentada somente no contexto apresentado e formatada em markdown.    
+    fundamentada somente no contexto apresentado e formatada em markdown.
+    NUNCA TRAZER PRODUTOS QUE NAO FORAM APRESENTADOS NO CONTEXTO. Se não tem nenhum produto é porque não tem o produto na loja, portanto você deve apenas falar que não possui o produto ideal.    
     Lembre-se que você está conversando com o cliente que está utilizando a plataforma e-commerce da PetLove, portanto direcione a mensagem como se voce fosse um assistente de compras conversando diretamente com ele. Converse com ele chamando-o em segunda pessoa.
   agent: assistente_vendas
